--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
         <title>Hello!</title>
     </head>
     <body>
+        <h1>Welcome to My Website</h1>
         Hello, World!
-        This is new info.
     </body>
 </html>
